# tictactoe-raylib

./: CMakeLists.txt  README.md  main.c
.github/workflows/: build.yml
src/: ai.c  ai.h  aiDataAndWeights.h  data.h  main.c
